finish initial home page

--- a/pages/Home/home.html
+++ b/pages/Home/home.html
@@ -15,7 +15,7 @@
         <nav>
 
             <figure>
-                <img src="http://github.com/http-sallein.png" alt="">
+                <img src="../../public/logo.png" alt="logotipo">
             </figure>
 
             <ul>
@@ -35,5 +35,227 @@
             <a href=""> criar ação </a>
         </nav>
     </header>
+
+    <main>
+
+        <section>
+            
+            <div>
+                <h1>Comunidade viva!</h1>
+                <p>Refloreste e ganhe com isso!</p>
+            </div>
+
+            <figure>
+                <img src="./assets/tree.png" alt="foto desenhada de uma arvore">
+            </figure>
+        </section>
+
+        <section>
+
+            <div>
+                <h2> Veja as próximas ações já agendadas </h2>
+                <a href=""> ver todos <img src="./assets/arrow.svg" alt="seta"> </a>
+            </div>
+
+            <div>
+
+                <section>
+
+                    <figure> 
+                        <img src="./assets/forest.jpg" alt="">
+                    </figure>
+
+                    <div>
+                        <h3> Multirão Reflorestamento  </h3>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
+                        <button>participar</button>
+                    </div>
+                </section>
+
+                <section>
+
+                    <figure> 
+                        <img src="./assets/forest.jpg" alt="">
+                    </figure>
+
+                    <div>
+                        <h3> Multirão Reflorestamento  </h3>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
+                        <button>participar</button>
+                    </div>
+                </section>
+
+                <section>
+
+                    <figure> 
+                        <img src="./assets/forest.jpg" alt="">
+                    </figure>
+
+                    <div>
+                        <h3> Multirão Reflorestamento  </h3>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
+                        <button>participar</button>
+                    </div>
+                </section>
+
+                <section>
+
+                    <figure> 
+                        <img src="./assets/forest.jpg" alt="">
+                    </figure>
+
+                    <div>
+                        <h3> Multirão Reflorestamento  </h3>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
+                        <button>participar</button>
+                    </div>
+                </section>
+            </div>
+        </section>
+
+        <section>
+
+            <div>
+                <h2> Artigos de especialistas recomendados </h2>
+                <a href=""> ver todos <img src="./assets/arrow.svg" alt="seta"> </a>
+            </div>
+
+            <div>
+                <section>
+
+                    <figure> 
+                        <img src="./assets/enchente.jpg" alt="">
+                    </figure>
+
+                    <div>
+                        <h3> Enchente?! O que fazer?  </h3>
+
+                        <div>
+                            <figure>
+                                <img src="./assets/especialista.jpg" alt="foto do especialista">
+                            </figure>
+
+                            <span> Dr. Recode </span>
+                        </div>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis...</p>
+                        <button> Ver completo </button>
+                    </div>
+                </section>
+
+                <section>
+
+                    <figure> 
+                        <img src="./assets/enchente.jpg" alt="">
+                    </figure>
+
+                    <div>
+                        <h3> Enchente?! O que fazer?  </h3>
+
+                        <div>
+                            <figure>
+                                <img src="./assets/especialista.jpg" alt="foto do especialista">
+                            </figure>
+
+                            <span> Dr. Recode </span>
+                        </div>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis...</p>
+                        <button> Ver completo </button>
+                    </div>
+                </section>
+
+                <section>
+
+                    <figure> 
+                        <img src="./assets/enchente.jpg" alt="">
+                    </figure>
+
+                    <div>
+                        <h3> Enchente?! O que fazer?  </h3>
+
+                        <div>
+                            <figure>
+                                <img src="./assets/especialista.jpg" alt="foto do especialista">
+                            </figure>
+
+                            <span> Dr. Recode </span>
+                        </div>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis...</p>
+                        <button> Ver completo </button>
+                    </div>
+                </section>
+
+                <section>
+
+                    <figure> 
+                        <img src="./assets/enchente.jpg" alt="">
+                    </figure>
+
+                    <div>
+                        <h3> Enchente?! O que fazer?  </h3>
+
+                        <div>
+                            <figure>
+                                <img src="./assets/especialista.jpg" alt="foto do especialista">
+                            </figure>
+
+                            <span> Dr. Recode </span>
+                        </div>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis...</p>
+                        <button> Ver completo </button>
+                    </div>
+                </section>
+                <section>
+
+                    <figure> 
+                        <img src="./assets/enchente.jpg" alt="">
+                    </figure>
+
+                    <div>
+                        <h3> Enchente?! O que fazer?  </h3>
+
+                        <div>
+                            <figure>
+                                <img src="./assets/especialista.jpg" alt="foto do especialista">
+                            </figure>
+
+                            <span> Dr. Recode </span>
+                        </div>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis...</p>
+                        <button> Ver completo </button>
+                    </div>
+                </section>
+                <section>
+
+                    <figure> 
+                        <img src="./assets/enchente.jpg" alt="">
+                    </figure>
+
+                    <div>
+                        <h3> Enchente?! O que fazer?  </h3>
+
+                        <div>
+                            <figure>
+                                <img src="./assets/especialista.jpg" alt="foto do especialista">
+                            </figure>
+
+                            <span> Dr. Recode </span>
+                        </div>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis...</p>
+                        <button> Ver completo </button>
+                    </div>
+                </section>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
