--- a/pages/Home/home.html
+++ b/pages/Home/home.html
@@ -42,7 +42,7 @@
             
             <div>
                 <h1>Comunidade viva!</h1>
-                <p>Refloreste e ganhe com isso!</p>
+                <p>Unindo forças, fortalecendo laços, transformando o amanhã.</p>
             </div>
 
             <figure>
