--- a/pages/Home/home.html
+++ b/pages/Home/home.html
@@ -257,5 +257,9 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <p>Comunidade Viva ©2024 </p>
+    </footer>
 </body>
 </html>
