created courses pages initial

--- a/pages/Home/home.html
+++ b/pages/Home/home.html
@@ -28,7 +28,7 @@
                 </li>
 
                 <li>
-                     <a href=""> Cursos </a>
+                     <a href="../Courses/courses.html"> Cursos </a>
                  </li>
             </ul>
 
