styles: edit login/signup styles

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <body>
         <div class="= container" id="login-container">
-            <h2>Login</h2>
-            <form action="/login" method="post">
-                <input type="text" name="username" placeholder="Usuário ou E-mail" required>
-                <input type="senha" name="senha" placeholder="senha" required>
-                <button type="submit">Entrar</button>
+            <h2>Login <span>.</span></h2>
+            <form action="./pages/Home/home.html" method="post">
+                <input type="text" name="username" placeholder="Digite seu e-mail" required>
+                <input type="password" name="senha" placeholder="Digite sua senha" required>
+                <button type="button"><a href="./pages/Home/home.html"> Entrar </a></button>
             </form>
             <div class="toggle">
                 <p>Não possui um cadastro? <a href="#">Cadastre-se aqui</a></p>
@@ -25,8 +25,8 @@
         </div>
 
         <div class="container" id="register-container" style="display: none;">
-            <h2>Cadastro</h2>
-            <form action="/register" method="POST">
+            <h2>Cadastro <span>.</span></h2>
+            <form action="./pages/Home/home.html" method="POST">
                 <input type="text" name="nome" placeholder="Nome Completo" required>
                 <input type="email" name="email" placeholder="E-mail" required>
                 <input type="password" name="password" placeholder="Senha" required>
