--- a/pages/Courses/courses.html
+++ b/pages/Courses/courses.html
@@ -48,7 +48,6 @@
             </section>
 
             <section>
-
                 <section>
 
                     <figure> 
@@ -57,6 +56,14 @@
 
                     <div>
                         <h3> O que são enchentes?  </h3>
+
+                        <div>
+                            <figure>
+                                <img src="./assets/especialista.jpg" alt="foto do especialista">
+                            </figure>
+
+                            <span> Dr. Recode </span>
+                        </div>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
 
@@ -73,20 +80,13 @@
                     <div>
                         <h3> O que são enchentes?  </h3>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
+                        <div>
+                            <figure>
+                                <img src="./assets/especialista.jpg" alt="foto do especialista">
+                            </figure>
 
-                        <button>Estudar</button>
-                    </div>
-                </section>
-
-                <section>
-
-                    <figure> 
-                        <img src="./assets/curso.png" alt="">
-                    </figure>
-
-                    <div>
-                        <h3> O que são enchentes?  </h3>
+                            <span> Dr. Recode </span>
+                        </div>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
 
@@ -103,6 +103,14 @@
                     <div>
                         <h3> O que são enchentes?  </h3>
 
+                        <div>
+                            <figure>
+                                <img src="./assets/especialista.jpg" alt="foto do especialista">
+                            </figure>
+
+                            <span> Dr. Recode </span>
+                        </div>
+
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
 
                         <button>Estudar</button>
@@ -117,6 +125,14 @@
 
                     <div>
                         <h3> O que são enchentes?  </h3>
+
+                        <div>
+                            <figure>
+                                <img src="./assets/especialista.jpg" alt="foto do especialista">
+                            </figure>
+
+                            <span> Dr. Recode </span>
+                        </div>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
 
