--- a/pages/Home/home.html
+++ b/pages/Home/home.html
@@ -69,7 +69,7 @@
                         <h3> Multirão Reflorestamento  </h3>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
-                        <button>participar</button>
+                        <button>Detalhes</button>
                     </div>
                 </section>
 
@@ -83,7 +83,7 @@
                         <h3> Multirão Reflorestamento  </h3>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
-                        <button>participar</button>
+                        <button>Detalhes</button>
                     </div>
                 </section>
 
@@ -97,7 +97,7 @@
                         <h3> Multirão Reflorestamento  </h3>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
-                        <button>participar</button>
+                        <button>Detalhes</button>
                     </div>
                 </section>
 
@@ -111,7 +111,7 @@
                         <h3> Multirão Reflorestamento  </h3>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, facilis.</p>
-                        <button>participar</button>
+                        <button>Detalhes</button>
                     </div>
                 </section>
             </div>
