--- a/pages/Courses/courses.html
+++ b/pages/Courses/courses.html
@@ -32,7 +32,7 @@
                      </li>
                 </ul>
     
-                <a href=""> criar ação </a>
+                <a href="./../CreateSocialAction/CreateSocialAction.html"> criar ação </a>
             </nav>
         </header>
 
