--- a/pages/CreateSocialAction/CreateSocialAction.html
+++ b/pages/CreateSocialAction/CreateSocialAction.html
@@ -6,7 +6,7 @@
     <title>Marcar local para reflorestamento</title>
 
     <link rel="stylesheet" href="./../../global.css">
-    <link rel="stylesheet" href="./CreateSocialAction.css">
+    <link rel="stylesheet" href="./createSocialAction.css">
 </head>
 <body>
     <div class="container">
