--- a/pages/Home/home.html
+++ b/pages/Home/home.html
@@ -24,7 +24,7 @@
                 </li>
 
                 <li>
-                     <a href=""> Forúns </a> 
+                     <a href="./../Forums/forums.html"> Forúns </a> 
                 </li>
 
                 <li>
@@ -32,7 +32,7 @@
                  </li>
             </ul>
 
-            <a href="./../CreateSocialAction/CreateSocialAction.html"> criar ação </a>
+            <a href="./../CreateSocialAction/createSocialAction.html"> criar ação </a>
         </nav>
     </header>
 
