refactor: rename dir public to globalAssets

--- a/pages/Home/home.html
+++ b/pages/Home/home.html
@@ -15,7 +15,7 @@
         <nav>
 
             <figure>
-                <img src="../../public/logo.png" alt="logotipo">
+                <img src="../../globalAssets/logo.png" alt="logotipo">
             </figure>
 
             <ul>
