rename projeto to Comunidade Viva RS

--- a/pages/Home/home.html
+++ b/pages/Home/home.html
@@ -41,7 +41,7 @@
         <section>
             
             <div>
-                <h1>Comunidade viva!</h1>
+                <h1>Comunidade Viva RS!</h1>
                 <p>Unindo forças, fortalecendo laços, transformando o amanhã.</p>
             </div>
 
